[package]
name = "JourneyCentury"
version = "0.1.0"
edition = "2024"

[workspace]
resolver = "2"

[dependencies]
log = { version = "*", features = ["max_level_debug", "release_max_level_warn"] }
bevy_dylib = { version = "0.16.0-rc.3" }
bevy = { version = "0.16.0", features = ["dynamic_linking"] }
noise = "0.9.0"
serde = "1.0.219"
bytemuck = "1.22.0"
rand = "0.8.5"

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3

[profile.wasm-release]
inherits = "release"
opt-level = "s"
strip = "debuginfo"

[target.x86_64-pc-windows-msvc]
linker = "rust-lld.exe"
